<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="provisioning_error_title">Oops!</string>
  <string name="setup_work_profile">Set up your profile</string>
  <string name="company_controls_workspace">Your organization controls this profile and keeps it secure. You control everything else on your device.</string>
  <string name="company_controls_device">Your organization will control this device and keep it secure.</string>
  <string name="the_following_is_your_mdm">The following app will need to access this profile:</string>
  <string name="the_following_is_your_mdm_for_device">The following app will manage your device:</string>
  <string name="set_up">Set up</string>
  <string name="setting_up_workspace">Setting up your work profile\u2026</string>
  <string name="admin_has_ability_to_monitor_profile">Your administrator has the ability to monitor and manage settings, corporate access, apps, permissions, and data associated with the profile, including network activity and your device\'s location information.</string>
  <string name="admin_has_ability_to_monitor_device">Your administrator has the ability to monitor and manage settings, corporate access, apps, permissions, and data associated with this device, including network activity and your device\'s location information.</string>
  <string name="theft_protection_disabled_warning">If you continue, theft protection features will not be enabled. To turn on theft protection, cancel now and set this up as a personal device.</string>
  <string name="contact_your_admin_for_more_info">Contact your administrator for more information, including your organization\'s privacy policies.</string>
  <string name="learn_more_link">Learn more </string>
  <string name="cancel_setup">CANCEL</string>
  <string name="ok_setup">OK</string>
  <string name="default_managed_profile_name">Work profile</string>
  <string name="delete_profile_title">Remove work profile?</string>
  <string name="opening_paragraph_delete_profile_unknown_company">A work profile already exists and is managed by:</string>
  <string name="opening_paragraph_delete_profile_known_company">This work profile is managed for %s using:</string>
  <string name="read_more_delete_profile">Before proceeding, <a href="#read_this_link">read this</a>.</string>
  <string name="sure_you_want_to_delete_profile">All apps and data in this profile will be deleted if you continue.</string>
  <string name="delete_profile">DELETE</string>
  <string name="cancel_delete_profile">CANCEL</string>
  <string name="encrypt_device_text_for_profile_owner_setup">To continue setting up your work profile, you\'ll need to encrypt your device. This may take some time.</string>
  <string name="encrypt_device_text_for_device_owner_setup">To continue setting up your device, you\'ll need to encrypt it. This may take some time.</string>
  <string name="encrypt_device_cancel">CANCEL</string>
  <string name="encrypt_device_launch_settings">ENCRYPT</string>
  <string name="continue_provisioning_notify_title">Encryption complete</string>
  <string name="continue_provisioning_notify_text">Touch to continue setting up your work profile</string>
  <string name="managed_provisioning_error_text">Couldn\'t set up your work profile. Contact your IT department or try again later.</string>
  <string name="managed_provisioning_not_supported">Your device doesn\'t support work profiles</string>
  <string name="user_is_not_owner">Work profiles need to be set up by the primary user of the device</string>
  <string name="device_owner_exists">Work profiles can not be setup on a managed device</string>
  <string name="maximum_user_limit_reached">Work profile can\'t be created because you\'ve reached the maximum number of users on your device. Remove at least one user and try again.</string>
  <string name="managed_provisioning_not_supported_by_launcher">Your work profile isn\'t supported by this launcher app. You\'ll need to switch to a launcher that\'s compatible.</string>
  <string name="cancel_provisioning">CANCEL</string>
  <string name="pick_launcher">OK</string>
  <string name="default_owned_device_username">User of work device</string>
  <string name="setup_work_device">Set up your device</string>
  <string name="progress_data_process">Processing setup data\u2026</string>
  <string name="progress_connect_to_wifi">Connecting to Wi-Fi\u2026</string>
  <string name="progress_download">Downloading the admin app\u2026</string>
  <string name="progress_install">Installing the admin app\u2026</string>
  <string name="progress_set_owner">Setting the device owner\u2026</string>
  <string name="device_owner_cancel_message">Stop setting up and erase your device\'s data?</string>
  <string name="device_owner_cancel_cancel">CANCEL</string>
  <string name="device_owner_error_ok">OK</string>
  <string name="device_owner_error_reset">RESET</string>
  <string name="device_owner_error_general">Couldn\'t set up your device. Contact your IT department. </string>
  <string name="device_owner_error_already_provisioned">This device is already set up.</string>
  <string name="device_owner_error_already_provisioned_user">This device is already set up for this user.</string>
  <string name="device_owner_error_wifi">Couldn\'t connect to Wi-Fi</string>
  <string name="device_owner_error_frp">This device is locked by factory reset protection. Contact your IT department.</string>
  <string name="frp_clear_progress_title" >Erasing</string>
  <string name="frp_clear_progress_text">Please wait...</string>
  <string name="device_owner_error_hash_mismatch">Couldn\'t use the admin app due to a checksum error. Contact your IT department.</string>
  <string name="device_owner_error_download_failed">Couldn\'t download the admin app</string>
  <string name="device_owner_error_package_invalid">Can\'t use the admin app. It\'s missing components or corrupted. Contact your IT department.</string>
  <string name="device_owner_error_package_name_invalid">Can\'t install the admin app. The package name is invalid. Contact your IT department.</string>
  <string name="device_owner_error_installation_failed">Couldn\'t install the admin app</string>
  <string name="device_owner_error_package_not_installed">The admin app isn\'t installed on your device</string>
  <string name="profile_owner_cancel_message">Stop setting up?</string>
  <string name="profile_owner_cancel_cancel">NO</string>
  <string name="profile_owner_cancel_ok">YES</string>
  <string name="profile_owner_cancelling">Canceling\u2026</string>
  <string name="work_profile_setup_later_title">Stop profile setup?</string>
  <string name="work_profile_setup_later_message">You can set up your work profile later from the device management app used by your organization.</string>
  <string name="work_profile_setup_continue">CONTINUE</string>
  <string name="work_profile_setup_stop">STOP</string>
  <string name="provisioning">Provisioning</string>
  <string name="copying_certs">Setting up CA certificates</string>
  <string name="setup_profile_start_setup">Set up your profile. Start setup</string>
  <string name="setup_profile_encryption">Set up your profile. Encryption</string>
  <string name="setup_profile_progress">Set up your profile. Showing progress</string>
  <string name="setup_device_start_setup">Set up your device. Start setup</string>
  <string name="setup_device_encryption">Set up your device. Encryption</string>
  <string name="setup_device_progress">Set up your device. Showing progress</string>
  <string name="learn_more_label">Learn more button</string>
  <string name="mdm_icon_label"><xliff:g id="icon_label" example="Test App">%1$s</xliff:g> icon</string>
</resources>