<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2015 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/DialogFragmentTextContainer">

    <ScrollView
        android:layout_weight="1"
        android:layout_height="0dp"
        style="@style/DialogFragmentScrollView">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/delete_managed_profile_opening_paragraph"
                android:text="@string/opening_paragraph_delete_profile_unknown_company"
                style="@style/MainText"
                android:paddingTop="@dimen/row_padding_top"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height"
                android:paddingTop="@dimen/main_text_padding_between_text"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical">
                <ImageView
                    android:id="@+id/delete_managed_profile_mdm_icon_view"
                    android:layout_width="@dimen/icon_width_height"
                    android:layout_height="@dimen/icon_width_height"
                    android:scaleType="centerInside"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/delete_managed_profile_device_manager_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/mdm_app_name_padding_left"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/main_text_size"/>
            </LinearLayout>

            <TextView
                android:id="@+id/delete_managed_profile_read_more_link"
                android:text="@string/read_more_delete_profile"
                android:visibility="gone"
                style="@style/MainText"/>

            <TextView
                android:id="@+id/delete_managed_profile_closing_paragraph"
                android:text="@string/sure_you_want_to_delete_profile"
                style="@style/MainText"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height">

        <Button
            android:id="@+id/delete_managed_profile_positive_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/delete_profile"
            style="@style/TransparentButton" />

        <Button
            android:id="@+id/delete_managed_profile_negative_button"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/delete_managed_profile_positive_button"
            android:text="@string/cancel_delete_profile"
            style="@style/TransparentButton" />

    </RelativeLayout>

</LinearLayout>